<?xml version="1.0"?>
<package format="2">
  <name>pseudo_odom</name>
  <version>0.1.0</version>
  <description>Pseudo odometry node for robot simulation</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>eigen</depend>

  <export>
  </export>
</package>
